--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -214,11 +214,13 @@
 		select {
 		}
 		.Rchr {
+ 			border: 0;
 			background-color: #F2A149;
 			color: white;
+			border-radius: 5px;
 		}
 		.Rchr::picker-icon {
-			content: '&#11030';
+			content: '\2713';
 			color: white;
 		}
 	</style>
@@ -2886,6 +2888,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
