--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -218,6 +218,9 @@
 			background-color: #F2A149;
 			color: white;
 			border-radius: 5px;
+ 			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
 		.Rchr::picker-icon {
 			content: '\2713';
@@ -2888,6 +2891,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
