--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -215,16 +215,17 @@
 		}
 		.Rchr {
  			border: 0;
+  			line-height: 2;
 			background-color: #F2A149;
-			color: white;
+			color: black;
 			border-radius: 5px;
  			box-shadow: 
-				inset 2px 2px 3px rgb(255 255 255 / 60%),
-				inset -2px -2px 3px rgb(0 0 0 / 60%);
+				outset 2px 2px 3px rgb(255 255 255 / 60%),
+				outset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
 		.Rchr::picker-icon {
 			content: '\2713';
-			color: white;
+			color: black;
 		}
 	</style>
 	
@@ -2891,6 +2892,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
