--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -220,11 +220,11 @@
 			color: black;
 			border-radius: 5px;
  			box-shadow: 
-				outset 2px 2px 3px rgb(255 255 255 / 60%),
-				outset -2px -2px 3px rgb(0 0 0 / 60%);
+				inset -2px -2px 3px rgb(255 255 255 / 60%),
+				inset 2px 2px 3px rgb(0 0 0 / 60%);
 		}
 		.Rchr::picker-icon {
-			content: '\2713';
+			content: '+';
 			color: black;
 		}
 	</style>
@@ -2892,6 +2892,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
