--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -218,14 +218,11 @@
   			line-height: 2;
 			background-color: #F2A149;
 			color: black;
+  			padding: 0 10px;
 			border-radius: 5px;
  			box-shadow: 
 				inset -2px -2px 3px rgb(255 255 255 / 60%),
 				inset 2px 2px 3px rgb(0 0 0 / 60%);
-		}
-		.Rchr::picker-icon {
-			content: '+';
-			color: black;
 		}
 	</style>
 	
@@ -2892,6 +2889,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
