--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -215,14 +215,18 @@
 		}
 		.Rchr {
  			border: 0;
-  			line-height: 2;
+  			line-height: 2.5;
 			background-color: #F2A149;
-			color: black;
+			color: white;
   			padding: 0 10px;
 			border-radius: 5px;
  			box-shadow: 
 				inset -2px -2px 3px rgb(255 255 255 / 60%),
 				inset 2px 2px 3px rgb(0 0 0 / 60%);
+		}
+		.Rchr::picker-icon {
+			content:'\21A1';
+			color: white;
 		}
 	</style>
 	
@@ -2889,6 +2893,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
