--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -215,7 +215,6 @@
 		}
 		.Rchr {
  			border: 0;
-  			line-height: 3;
 			background-color: #F2A149;
 			color: white;
   			padding: 0 10px;
@@ -223,6 +222,10 @@
  			box-shadow: 
 				inset -2px -2px 3px rgb(255 255 255 / 60%),
 				inset 2px 2px 3px rgb(0 0 0 / 60%);
+		}
+		.Rchr:active {
+			border: 1;
+			border-color: black;
 		}
 	</style>
 	
@@ -2889,6 +2892,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
