--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -223,7 +223,7 @@
 				inset -2px -2px 3px rgb(255 255 255 / 60%),
 				inset 2px 2px 3px rgb(0 0 0 / 60%);
 		}
-		.Rchr:active {
+		.Rchr:focus {
 			border: 1;
 			border-color: black;
 		}
@@ -2892,6 +2892,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
