--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -219,13 +219,14 @@
 			color: white;
   			padding: 0 10px;
 			border-radius: 5px;
- 			box-shadow: 
-				inset -2px -2px 3px rgb(255 255 255 / 60%),
-				inset 2px 2px 3px rgb(0 0 0 / 60%);
 		}
-		.Rchr:focus {
+		.Rchr:focus, .Rchr:focus {
 			border: 1;
 			border-color: black;
+		}
+		option:hover, option:focus {
+			font-weight: bold;
+			color: blue;
 		}
 	</style>
 	
@@ -2892,6 +2893,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
