--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -217,12 +217,12 @@
  			border: 0;
 			background-color: #F2A149;
 			color: white;
+			height: 30px;
   			padding: 0 10px;
 			border-radius: 5px;
 		}
 		.Rchr:focus, .Rchr:focus {
-			border: 1;
-			border-color: black;
+			border: 1px solid black;
 		}
 		option:hover, option:focus {
 			font-weight: bold;
@@ -2893,6 +2893,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
