--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -217,11 +217,11 @@
  			border: 0;
 			background-color: #F2A149;
 			color: white;
-			height: 30px;
+			height: 25px;
   			padding: 0 10px;
 			border-radius: 5px;
 		}
-		.Rchr:focus, .Rchr:focus {
+		.Rchr:hover, .Rchr:focus {
 			border: 1px solid black;
 		}
 		option:hover, option:focus {
@@ -2893,6 +2893,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
