--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -220,6 +220,7 @@
 			height: 25px;
   			padding: 0 10px;
 			border-radius: 5px;
+			margin-bottom: 10px;
 		}
 		.Rchr:hover, .Rchr:focus {
 			border: 2px solid black;
@@ -2893,6 +2894,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
