--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -225,9 +225,8 @@
 		.Rchr:hover, .Rchr:focus {
 			border: 2px solid black;
 		}
-		option:hover, option:focus {
-			font-weight: bold;
-			color: blue;
+		option:checked {
+			color: gray;
 		}
 	</style>
 	
@@ -2894,6 +2893,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
