--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -225,7 +225,7 @@
 		.Rchr:hover, .Rchr:focus {
 			border: 2px solid black;
 		}
-		option:checked {
+		option:selected {
 			color: gray;
 		}
 	</style>
@@ -2893,6 +2893,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
