--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -177,6 +177,21 @@
 		.combo:hover {
 			background-color: #E08F38;
 		}
+		.Glossaire {
+ 			border: 0;
+  			line-height: 2;
+  			padding: 0 15px;
+			background-color: #E0B0FF;
+			color: black;
+			border-radius: 5px;
+			text-shadow: 1px 1px 1px white;
+ 			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
+		}
+		.Glossaire:hover {
+			background-color: #D891EF;
+		}
 		
 		input::file-selector-button {
  			border: 0;
@@ -2899,6 +2914,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
