--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -177,7 +177,7 @@
 		.combo:hover {
 			background-color: #E08F38;
 		}
-		.Glossaire {
+		.glossaire {
  			border: 0;
   			line-height: 2;
   			padding: 0 15px;
@@ -189,7 +189,7 @@
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
-		.Glossaire:hover {
+		.glossaire:hover {
 			background-color: #D891EF;
 		}
 		
@@ -2914,6 +2914,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
