--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -169,7 +169,7 @@
  			border: 0;
   			line-height: 2.5;
   			padding: 0 20px;
-			background-color: #3EB489;
+			background-color: #F2A149;
 			color: white;
 			border-radius: 5px;
 			text-shadow: 1px 1px 1px black;
@@ -178,13 +178,13 @@
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
 		.Cancel:hover {
-			background-color: #006A4E;
+			background-color: #E08F38;
 		}
 		.Delete:enabled {
  			border: 0;
   			line-height: 2.5;
   			padding: 0 20px;
-			background-color: #3EB489;
+			background-color: #FF6347;
 			color: white;
 			border-radius: 5px;
 			text-shadow: 1px 1px 1px black;
@@ -193,13 +193,13 @@
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
 		.Delete:hover {
-			background-color: #006A4E;
+			background-color: #F70D1A;
 		}
 		.Delete:disabled {
  			border: 0;
   			line-height: 2.5;
   			padding: 0 20px;
-			background-color: #7C9D8E;
+			background-color: #E55B3C;
 			color: white;
 			border-radius: 5px;
 		}
@@ -8169,6 +8169,7 @@
 	
 </body>
 </html>
+
 
 
 
