--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -246,6 +246,9 @@
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
+		input::file-selector-button:hover {
+			background-color: #006A4E;
+		}
 
 		td {
 		}
@@ -8169,6 +8172,7 @@
 	
 </body>
 </html>
+
 
 
 
