--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -391,7 +391,7 @@
 			let LaboInputComboTxt = "Laboratoire : ";
 		
 			// pre build combo
-			LaboInputComboTxt += "<select id=\"LaboInputCombo" + PlOrPr + "\" style=\"width: 200px;\" class='Rchr'>";
+			LaboInputComboTxt += "<select id=\"LaboInputCombo_" + PlOrPr + "\" style=\"width: 200px;\" class='Rchr'>";
 			// fetch list labo
 			console.log("Doing combo list labo SQL request ...");
 			let LaboSQLRequestResultObj = [];
@@ -2929,6 +2929,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
