--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -203,6 +203,7 @@
  			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
+			margin-bottom: 10px;
 		}
 		.Back:hover {
 			background-color: #006A4E;
@@ -2929,6 +2930,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
