--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -255,6 +255,24 @@
 		.species {
 			text-align: left;
 		}
+
+		input[type=text] {
+			border-radius: 5px;
+			border: 2px solid #3EB489;
+			padding-left: 10px;
+			padding-right: 10px;
+			padding-top: 5px;
+			padding-bottom: 5px;
+			margin-bottom: 10px;
+			font-size: 14px;
+		}
+		input[type=text]:focus {
+			outline: none;
+			border: 4px solid #3EB489;
+		}
+		input[type=text]::placeholder {
+			color: #DDDDDD;
+		}
 	</style>
 	
 	<!-- Database interface script -->
@@ -8172,6 +8190,7 @@
 	
 </body>
 </html>
+
 
 
 
