--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -273,6 +273,10 @@
 		input[type=text]::placeholder {
 			color: #DDDDDD;
 		}
+
+		textarea {
+			border-radius: 5px;
+		}
 	</style>
 	
 	<!-- Database interface script -->
@@ -8190,6 +8194,7 @@
 	
 </body>
 </html>
+
 
 
 
