--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -20,6 +20,11 @@
 		.MatchResultClass:hover {
 			color: red;
 		}
+		.tox.tox-tinymce {
+			border-radius: 10px;
+			border: 1px solid #3EB489; 
+		}
+		
 		ul {
 			margin-top: 0;
 			margin-bottom: 0;
@@ -8190,6 +8195,7 @@
 	
 </body>
 </html>
+
 
 
 
