--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -22,7 +22,10 @@
 		}
 		.tox.tox-tinymce {
 			border-radius: 10px;
-			border: 1px solid #3EB489; 
+			border: 2px solid #3EB489; 
+		}
+		.tox.tox-tinymce:focus {
+			border: 4px solid #3EB489;
 		}
 		
 		ul {
@@ -8195,6 +8198,7 @@
 	
 </body>
 </html>
+
 
 
 
