--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -7650,7 +7650,7 @@
 			RowEditFormTxt += " /><br/>";			
 			// append Plante view
 			let PlanteInfoTxt = "";
-			PlanteInfoTxt += "<h1>Plante " + PlanteId + " Info :</h1><br/>";
+			PlanteInfoTxt += "<h1>Plante " + PlanteId + " Info :</h1>";
 			// fetch Plante info
 			let PlanteSQLRequestResultObj = [];
 			if(PlanteId == 0)
@@ -8212,6 +8212,7 @@
 	
 </body>
 </html>
+
 
 
 
