--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -281,6 +281,19 @@
 		input[type=text]::placeholder {
 			color: #DDDDDD;
 		}
+
+		select {
+ 			border: 1px solid black;
+			background-color: #3EB489;
+			color: white;
+			height: 25px;
+  			padding: 0 10px;
+			border-radius: 5px;
+			margin-bottom: 10px;
+		}
+		select:hover, select:focus {
+			border: 2px solid black;
+		}
 	</style>
 	
 	<!-- Database interface script -->
@@ -8212,6 +8225,7 @@
 	
 </body>
 </html>
+
 
 
 
