--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -4498,7 +4498,7 @@
 			RowEditFormTxt += " /><br/>";			
 			// append product view
 			let ProductInfoTxt = "";
-			ProductInfoTxt += "<h1>Product " + ProductId + " Info :</h1><br/>";
+			ProductInfoTxt += "<h1>Product " + ProductId + " Info :</h1>";
 			// fetch product info
 			let ProductSQLRequestResultObj = [];
 			if(ProductId == 0)
@@ -8240,6 +8240,7 @@
 	
 </body>
 </html>
+
 
 
 
