--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -309,6 +309,17 @@
 		select:hover, select:focus {
 			border: 2px solid black;
 		}
+		
+		input[type="checkbox"] {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width:20px;
+			height: 20px;
+			border: 2px solid #3EB489;
+			background: #eee;
+			border-radius: 5px;
+		}
 	</style>
 	
 	<!-- Database interface script -->
@@ -8240,6 +8251,7 @@
 	
 </body>
 </html>
+
 
 
 
