--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -311,14 +311,14 @@
 		}
 		
 		input[type="checkbox"] {
-			position: absolute;
-			left: 0;
-			top: 0;
 			width:20px;
 			height: 20px;
 			border: 2px solid #3EB489;
 			background: #eee;
 			border-radius: 5px;
+			box-shadow: 
+				inset 2px 2px 3px rgb(255 255 255 / 60%),
+				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
 	</style>
 	
@@ -8251,6 +8251,7 @@
 	
 </body>
 </html>
+
 
 
 
