--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -310,7 +310,7 @@
 			border: 2px solid black;
 		}
 		
-		input[type="checkbox"] {
+		input[type="checkbox"] label::before {
 			width:15px;
 			height: 15px;
 			border: 2px solid #3EB489;
@@ -319,6 +319,9 @@
 			box-shadow: 
 				inset 2px 2px 3px rgb(255 255 255 / 60%),
 				inset -2px -2px 3px rgb(0 0 0 / 60%);
+		}
+		input[type="checkbox"] label::after {
+			color: red;
 		}
 	</style>
 	
@@ -8251,6 +8254,7 @@
 	
 </body>
 </html>
+
 
 
 
