--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -310,10 +310,11 @@
 			border: 2px solid black;
 		}
 		
-		input[type="checkbox"]:not(:checked) {
+		input[type="checkbox"] {
+			appearance: none;
 			width:15px;
 			height: 15px;
-			border: 2px solid #3EB489;
+			border: 4px solid #3EB489;
 			background: #eee;
 			border-radius: 5px;
 			box-shadow: 
@@ -8254,6 +8255,7 @@
 	
 </body>
 </html>
+
 
 
 
