--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -312,14 +312,11 @@
 		
 		input[type="checkbox"] {
 			appearance: none;
-			width:15px;
-			height: 15px;
-			border: 4px solid #3EB489;
-			background: #eee;
+			width: 20px;
+			height: 20px;
+			border: 2px solid #3EB489;
+			background-color: #eee;
 			border-radius: 5px;
-			box-shadow: 
-				inset 2px 2px 3px rgb(255 255 255 / 60%),
-				inset -2px -2px 3px rgb(0 0 0 / 60%);
 		}
 		input[type="checkbox"]:checked {
 			color: red;
@@ -8255,6 +8252,7 @@
 	
 </body>
 </html>
+
 
 
 
