--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -319,12 +319,9 @@
 			border-radius: 5px;
 		}
 		input[type="checkbox"]:checked {
-			appearance: none;
-			width: 20px;
-			height: 20px;
-			border: 2px solid #3EB489;
 			background-color: red;
-			border-radius: 5px;
+			transform-origin: bottom left;
+			clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 		}
 	</style>
 	
@@ -8257,6 +8254,7 @@
 	
 </body>
 </html>
+
 
 
 
