--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -319,7 +319,10 @@
 			border-radius: 5px;
 		}
 		input[type="checkbox"]:checked {
+			appearance: none;
 			background-color: red;
+			transform-origin: bottom left;
+			clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 		}
 	</style>
 	
@@ -8252,6 +8255,7 @@
 	
 </body>
 </html>
+
 
 
 
