--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -321,17 +321,9 @@
 			border-radius: 5px;
 		}
 		input[type="checkbox"]:checked {
-			background: yellow;
-			  margin:0px;
-			  position: relative;
-			  &:before {
-			    font-family: FontAwesome;
-			    content: '\f00c';
-			    display: block;
-			    color: grey;
-			    font-size: 13px;
-			    position: absolute;
-			  }
+			background-color: yellow;
+			margin:0px;
+			position: relative;
 		}
 	</style>
 	
@@ -8264,6 +8256,7 @@
 	
 </body>
 </html>
+
 
 
 
