--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -311,19 +311,9 @@
 		}
 		
 		input[type="checkbox"]:not(:checked) {
-			-webkit-appearance: none;
-			-moz-appearance: none;
-			-ms-appearance: none;
-			width: 20px;
-			height: 20px;
-			border: 2px solid #3EB489;
-			background-color: #eee;
-			border-radius: 5px;
+			outline: 3px solid #3EB489;
 		}
 		input[type="checkbox"]:checked {
-			background-color: yellow;
-			margin:0px;
-			position: relative;
 		}
 	</style>
 	
@@ -8256,6 +8246,7 @@
 	
 </body>
 </html>
+
 
 
 
