--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -311,9 +311,12 @@
 		}
 		
 		input[type="checkbox"]:not(:checked) {
-			outline: 3px solid #3EB489;
+			border: 3px solid #3EB489;
+			border-radius: 5px;
 		}
 		input[type="checkbox"]:checked {
+			border: 3px solid #3EB489;
+			border-radius: 5px;
 		}
 	</style>
 	
@@ -8246,6 +8249,7 @@
 	
 </body>
 </html>
+
 
 
 
