--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -311,12 +311,12 @@
 		}
 		
 		input[type="checkbox"]:not(:checked) {
-			border: 3px solid #3EB489;
-			border-radius: 5px;
+			outline: 3px solid #3EB489;
+			outline-radius: 5px;
 		}
 		input[type="checkbox"]:checked {
-			border: 3px solid #3EB489;
-			border-radius: 5px;
+			outline: 3px solid #3EB489;
+			outline-radius: 5px;
 		}
 	</style>
 	
@@ -8249,6 +8249,7 @@
 	
 </body>
 </html>
+
 
 
 
