--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -310,13 +310,16 @@
 			border: 2px solid black;
 		}
 		
-		input[type="checkbox"]:not(:checked) {
-			outline: 3px solid #3EB489;
-			outline-radius: 5px;
+		input[type=checkbox] {
+		  display: none;
 		}
-		input[type="checkbox"]:checked {
-			outline: 3px solid #3EB489;
-			outline-radius: 5px;
+		input[type=checkbox]:checked + label:before {
+		  content: "\2713";
+		  text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
+		  font-size: 12px;
+		  color: #fff;
+		  text-align: center;
+		    line-height: 12px;
 		}
 	</style>
 	
@@ -8249,6 +8252,7 @@
 	
 </body>
 </html>
+
 
 
 
