--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -322,11 +322,12 @@
 		    content: "✓";
 		    font-size: 15px;
 		    color: transparent !important;
-		    background: #fef2e0;
+		    background: #eee;
 		    display: block;
 		    width: 15px;
 		    height: 15px;
-		    border: 1px solid black;
+		    border: 2px solid #3EB489;
+			border-radius: 5px;
 		    margin-right: 7px;
 		}
 		
@@ -8264,6 +8265,7 @@
 	
 </body>
 </html>
+
 
 
 
