--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -322,13 +322,13 @@
 		    content: "✓";
 		    font-size: 15px;
 		    color: transparent !important;
-		    background: #eee;
+		    background: #ADD8E6;
 		    display: block;
 		    width: 15px;
 		    height: 15px;
 		    border: 2px solid #3EB489;
 			border-radius: 5px;
-		    margin-right: 7px;
+		    margin-right: 3px;
 		}
 		
 		input[type=checkbox]:checked:before {
@@ -8265,6 +8265,7 @@
 	
 </body>
 </html>
+
 
 
 
