--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -320,7 +320,8 @@
 		
 		input[type=checkbox]:before {
 		    content: "✓";
-		    font-size: 20px;
+		    font-size: 15px;
+			font-weight: bold;
 		    color: transparent !important;
 		    background: #ADD8E6;
 		    display: block;
@@ -8265,6 +8266,7 @@
 	
 </body>
 </html>
+
 
 
 
