--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -322,6 +322,8 @@
 		    content: "✓";
 		    font-size: 15px;
 			font-weight: bold;
+			padding-left: 2px;
+			padding-bottom: 2px;
 		    color: transparent !important;
 		    background: #ADD8E6;
 		    display: block;
@@ -8266,6 +8268,7 @@
 	
 </body>
 </html>
+
 
 
 
