--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -331,7 +331,8 @@
 		    height: 15px;
 		    border: 2px solid #3EB489;
 			border-radius: 5px;
-		    margin-right: 3px;
+		    margin-left: 5px;
+		    margin-right: 2px;
 		}
 		
 		input[type=checkbox]:checked:before {
@@ -8268,6 +8269,7 @@
 	
 </body>
 </html>
+
 
 
 
